<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="home.amml.ad.flora_ad.view.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_addFloraFragment"
            app:destination="@id/addFloraFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="home.amml.ad.flora_ad.view.SecondFragment"
        android:label="@string/flora_detail_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_addImagenFragment"
            app:destination="@id/addImagenFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFloraFragment"
        android:name="home.amml.ad.flora_ad.view.AddFloraFragment"
        android:label="@string/add_flora_fragment_label"
        tools:layout="@layout/fragment_add_flora">
        <action
            android:id="@+id/action_addFloraFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_addFloraFragment_to_addImagenFragment"
            app:destination="@id/addImagenFragment" />
    </fragment>
    <fragment
        android:id="@+id/addImagenFragment"
        android:name="home.amml.ad.flora_ad.view.AddImagenFragment"
        android:label="@string/add_image_fragment_label"
        tools:layout="@layout/fragment_add_imagen">
        <action
            android:id="@+id/action_addImagenFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_addImagenFragment_to_addFloraFragment"
            app:destination="@id/addFloraFragment" />
    </fragment>
</navigation>