<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddImagenFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_HTop_AddImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_HBottom_AddImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H_iv_Upload_AddImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_VStart_AddImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_VEnd_AddImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <TextView
        android:id="@+id/tv_AddNewImagen_AddImagen"
        style="@style/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_AddNewImagen_AddImagen"
        app:layout_constraintBottom_toTopOf="@+id/iv_Upload_AddImagen"
        app:layout_constraintEnd_toStartOf="@+id/guideline_VEnd_AddImagen"
        app:layout_constraintStart_toEndOf="@+id/guideline_VStart_AddImagen"
        app:layout_constraintTop_toBottomOf="@+id/guideline_HTop_AddImagen" />

    <ImageView
        android:id="@+id/iv_Upload_AddImagen"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_iv_Upload_AddImagen"
        app:layout_constraintBottom_toTopOf="@+id/guideline_H_iv_Upload_AddImagen"
        app:layout_constraintEnd_toStartOf="@+id/guideline_VEnd_AddImagen"
        app:layout_constraintStart_toEndOf="@+id/guideline_VStart_AddImagen"
        app:layout_constraintTop_toBottomOf="@+id/tv_AddNewImagen_AddImagen"
        tools:src="@drawable/ic_baseline_cloud_upload_24" />

    <ScrollView
        android:id="@+id/scrollView_AddImagen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_Add_AddImagen"
        app:layout_constraintEnd_toStartOf="@+id/guideline_VEnd_AddImagen"
        app:layout_constraintStart_toEndOf="@+id/guideline_VStart_AddImagen"
        app:layout_constraintTop_toBottomOf="@+id/guideline_H_iv_Upload_AddImagen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_Nombre_AddImagen"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_Nombre_AddImagen"
                app:errorEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Nombre_AddImagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_Descripcion_AddImagen"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_Descripcion_AddImagen"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Descripcion_AddImagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/bt_Cancel_AddImagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_Cancel_AddImagen"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline_HBottom_AddImagen"
        app:layout_constraintEnd_toStartOf="@+id/bt_Add_AddImagen"
        app:layout_constraintStart_toEndOf="@+id/guideline_VStart_AddImagen"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_AddImagen" />

    <Button
        android:id="@+id/bt_Add_AddImagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_Add_AddImagen"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/bt_Cancel_AddImagen"
        app:layout_constraintEnd_toStartOf="@+id/guideline_VEnd_AddImagen"
        app:layout_constraintStart_toEndOf="@+id/bt_Cancel_AddImagen"
        app:layout_constraintTop_toTopOf="@+id/bt_Cancel_AddImagen" />

</androidx.constraintlayout.widget.ConstraintLayout>